--- a/css/main.css
+++ b/css/main.css
@@ -221,7 +221,7 @@ body.registration{background-color: #F5F5F5;}
 .registration-infor-box{padding: 0 40px;}
 	.registration-infor .panel{box-shadow: none;}
 	.registration-prompt{border: 1px dashed #DDDDDD;line-height: 32px;color: #2f86c9;font-size: 14px;}
-	.submit-registration{display: block;margin: 60px auto 0 auto;}
+	.submit-registration{display: block!important;margin: 60px auto 0 auto;}
 .registration-copyright{line-height: 40px;color: #AAAAAA;background-color: #f4f4f4;margin-top: 10px;}	
 /*报名成功*/
 .registration-erweima{width: 260px;height: 260px;border: 1px dashed #DDDDDD;margin: 30px auto 40px;}	
