--- a/css/main.css
+++ b/css/main.css
@@ -224,8 +224,8 @@ body.registration{background-color: #F5F5F5;}
 	.submit-registration{margin-top: 60px;}
 .registration-copyright{line-height: 40px;color: #AAAAAA;background-color: #f4f4f4;margin-top: 10px;}	
 /*报名成功*/
-.registration-erweima{width: 260px;height: 260px;border: 1px dashed #DDDDDD;margin: 30px auto 40px;}	
-	.registrationCode{width: 190px;height: 190px;margin: 24px auto 12px;}
+.registration-erweima{width: 260px;height: 260px;border: 1px dashed #DDDDDD;margin: 30px auto 40px;padding: 35px;}	
+	.registrationCode{width: 190px;height: 190px;}
 		.registrationCode img{width: 190px;height: 190px;}	
 	.codedown{display: block;color: #999;font-size: 18px;}
 		a.codedown:hover,a.codedown:link,a.codedown:visited{color: #999;text-decoration: none;}
